Fixed menu spacing

--- a/public/static/css/master.css
+++ b/public/static/css/master.css
@@ -37,12 +37,15 @@ nav {
 	line-height: 17px;
     font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 }
+nav ul {
+	padding: 10px;
+}
 nav ul li {
     padding-right: 5px;
     display: inline;
 }
 nav ul li a {
-	padding: 10px;
+	padding: 10px 20px 10px 20px;
 	color: #FFFFFF;
 	text-decoration: none;
 }
